<resources>
    <string name="app_name">Twilight Tweaker</string>
    <string name="prefs_store">settings</string>
    <string name="s_lista_b">White list</string>
    <string name="s_lista_n">Dark list</string>
    <string name="s_habilitar">Disable module</string>
    <string name="ss_habilitar">Let the system decide</string>
    <string name="s_modo">Force day/night</string>
    <string name="ss_modo">Set default journal</string>
    <string name="title_activity_twi_config">Twilight Tweaker</string>
    <string name="s_lista">Admission list</string>
    <string name="s_lista_modo">Type</string>
    <string name="s_lista_selec">Select applications</string>
    <string name="s_general">General</string>
    <string name="s_reloj">Schedule</string>
    <string name="ss_reloj">Select when to use night mode</string>
    <string name="s_about">About</string>
    <string name="s_alias">created by kapodamy</string>
    <string name="s_modo_titulo">Force</string>
    <string name="s_icono">icon</string>
    <string name="ss_agregar">Add application</string>
    <string name="s_elegir_app_ninguna">Notting selected</string>
    <string name="s_cancelar">Cancel</string>
    <string name="s_cargando_app">Loading applications&#8230;</string>
    <string name="s_elegir_app_vacio"><b>The list is empty</b>.\nChoose applications by pressing the button <b>+</b></string>
    <string name="ss_elegir_app">See the list of target applications</string>
    <string name="s_hora_manual">Manual</string>
    <string name="ss_hora_inicio">Choose when to start the night</string>
    <string name="ss_hora_final">Choose when to end the night</string>
    <string name="s_hora_establecer">Change schedule</string>
    <string name="s_hora_inicio_cat">Start</string>
    <string name="s_hora_final_cat">End</string>
    <string name="ss_hora_definida">The night %1$s at %2$s.</string>
    <string name="ss_jornada_incio">start</string>
    <string name="ss_jornada_finaliza">end</string>
    <string name="s_hora_iguales">Invalid configuration. The schedules are identical</string>
    <string name="s_gancho">The module is not active. <b>Restart</b> the device or verify that it <b>is enabled</b>.</string>
    <string name="s_gancho2">The application was updated, <b>restart</b> the device to apply the changes.</string>
    <string name="s_quitar_app">Remove</string>

</resources>
