<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory android:title="@string/s_hora_inicio_cat">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="usar_inicio"
        android:summary="@string/ss_hora_inicio"
        android:title="@string/s_hora_manual" />
    <Preference
        android:key="establecer_inicio"
        android:title="@string/s_hora_establecer"
        android:summary=""
        />
</PreferenceCategory>

<PreferenceCategory android:title="@string/s_hora_final_cat">
    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="usar_final"
        android:summary="@string/ss_hora_final"
        android:title="@string/s_hora_manual" />
    <Preference
        android:key="establecer_final"
        android:title="@string/s_hora_establecer"
        android:summary=""
        />
</PreferenceCategory>
</PreferenceScreen>
